Add course and auth

--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ REVUE_API_KEY=
 EMAILOCTOPUS_API_URL=https://emailoctopus.com/api/1.6/
 EMAILOCTOPUS_API_KEY=
 EMAILOCTOPUS_LIST_ID=
+
+
+GITHUB_ID=Iv1.480a4d8f2c173066
+GITHUB_SECRET=4af8dc43631ab748e25b585775f443a5a644cdfa
