--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mailchimp/mailchimp_marketing": "^3.0.58",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
+    "@videojs-player/react": "^1.0.0",
     "autoprefixer": "^10.4.0",
     "esbuild": "^0.13.13",
     "github-slugger": "^1.3.0",
@@ -24,6 +25,7 @@
     "mdx-bundler": "^8.0.0",
     "moment": "^2.29.4",
     "next": "12.1.4",
+    "next-auth": "^4.22.1",
     "next-themes": "^0.0.14",
     "postcss": "^8.4.5",
     "preact": "^10.6.2",
@@ -42,7 +44,8 @@
     "remark-math": "^5.1.1",
     "sharp": "^0.28.3",
     "tailwindcss": "^3.0.23",
-    "unist-util-visit": "^4.0.0"
+    "unist-util-visit": "^4.0.0",
+    "video.js": "^8.3.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "12.1.4",
