--- a/.env
+++ b/.env
@@ -31,3 +31,6 @@ EMAILOCTOPUS_LIST_ID=
 
 GITHUB_ID=Iv1.480a4d8f2c173066
 GITHUB_SECRET=4af8dc43631ab748e25b585775f443a5a644cdfa
+
+FACEBOOK_ID=229993846540721
+FACEBOOK_SECRET=9d9758c892bafb24dd32ca4ba5b1702a
