Add course and auth

--- a/.env
+++ b/.env
@@ -34,3 +34,9 @@ GITHUB_SECRET=4af8dc43631ab748e25b585775f443a5a644cdfa
 
 FACEBOOK_ID=229993846540721
 FACEBOOK_SECRET=9d9758c892bafb24dd32ca4ba5b1702a
+
+
+
+MONGODB_URI=mongodb+srv://vichea:Mru6q3i9IXpz1mRU@cluster0.9xdsu.mongodb.net/vichea_me?retryWrites=true&w=majority
+SECRET_KEY=secret
+NEXT_PUBLIC_API_URL=http://localhost:3000/api
