--- a/package.json
+++ b/package.json
@@ -12,18 +12,26 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^1.0.0",
     "@fontsource/inter": "4.5.2",
     "@mailchimp/mailchimp_marketing": "^3.0.58",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^4.16.2",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "@videojs-player/react": "^1.0.0",
     "autoprefixer": "^10.4.0",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "esbuild": "^0.13.13",
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mdx-bundler": "^8.0.0",
     "moment": "^2.29.4",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.1",
     "next": "12.1.4",
     "next-auth": "^4.22.1",
     "next-themes": "^0.0.14",
@@ -64,6 +72,7 @@
     "next-remote-watch": "^1.0.0",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.4",
+    "prisma": "^4.16.2",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0"
   },
