--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/typography": "^0.5.0",
     "@videojs-player/react": "^1.0.0",
     "autoprefixer": "^10.4.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "esbuild": "^0.13.13",
